check user role
